<resources>
    <string name="app_name">Exam101</string>
    <string name="empty_error">This field can\'t be empty.!</string>
    <string name="invalid_email">Invalid Email Id</string>
    <string name="enter_ten_digits_number">Enter 10 digits Mobile Number</string>
    <string name="valid_number">Enter Valid Mobile Number.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="exit_msg">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password_not_match">Password and Confirm Password does not match.</string>
    <string name="alert">Alert!!</string>
    <string name="aadhaar_valid">Please enter valid Aadhaar number!!</string>
    <string name="pan_card_valid">Please enter valid PAN number!!</string>
    <string name="ifsc_valid">Please enter valid IFSC!!</string>
    <string name="account_valid">Please enter valid Account Number!!</string>
    <string name="enable_permission">Enable permission Manually</string>
    <string name="permit_manually">Permit Manually</string>
    <string name="amount_valid">Please enter valid amount</string>
    <string name="share_the_ride_and_save_the_enviroment">Share the ride and save the enviroment</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="continue_with_social_networks">Continue with Social Networks</string>
    <string name="connect_via_social_media">Connect via Social Media</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="select_country">Select country</string>
    <string name="search_for_country">Search for Country</string>
    <string name="what_s_your_phone_number">What\'s your phone number?</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_the_one_time_password">Enter the One Time Password</string>
    <string name="please_enter_the_4_digit_verification">Please enter the 4 digit verification</string>
    <string name="code_sent_to">code sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="register_your_details">Register your details</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_mail_id">Enter your email id</string>
    <string name="field_empty">Field can\'t be empty!</string>
    <string name="home">Home</string>
    <string name="yourRides">Your Rides</string>
    <string name="publish">Publish</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_best_course">Find The Best Courses &amp; Upgrade Your Skills.</string>
    <string name="photography">Photography</string>
    <string name="data_analytics">Data &amp; Analytics</string>
    <string name="graphic_design">Graphic Design</string>
    <string name="digital_marketing">Digital Marketing</string>
    <string name="top">Top</string>
    <string name="view_all">View all</string>
    <string name="details">Details</string>
    <string name="graphic_design_text">Graphic Design, Adobe software, indesign, figma, industory, imeulator, photoshop,alkdjfkjsdkfjksdjkfljklsdjf</string>
    <string name="fourdotfour">4.4</string>
    <string name="onedottwokrating">(1.2k Ratings)</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="news">News</string>
    <string name="results">Results</string>
    <string name="covid19">Covid19</string>
    <string name="tens_of_thousands_of_people_have_been_marching_in_the_belgain">Tens of thousands of people have been marching in the Belgian.</string>
    <string name="_09_20_pm">09:20 pm</string>
    <string name="_12th_april">12th April</string>
    <string name="reffer_a_friend">Refer a Friend</string>
    <string name="logout">Logout</string>
    <string name="manage_account">Manage Account</string>
    <string name="order_history">Order History</string>
    <string name="course_list">Course List</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="affiliation">Affiliation</string>
    <string name="request_for_affiliation_code">Request for Affiliation Code</string>
    <string name="refer_your_code_to_make_money">Refer your code to make money.</string>
    <string name="more">More</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="notifications">Notifications</string>
    <string name="rate_now">Rate Now</string>
    <string name="digital_design_thinking">Digital Design Thinking</string>
    <string name="transaction_id">Transaction ID -</string>
    <string name="order_id">Order ID -</string>
    <string name="package_duration">Package Duration:</string>
    <string name="invoice">Invoice</string>
    <string name="save">Save</string>
    <string name="my_exam">My Exams</string>
    <string name="learn_responsive_web_design_nessentials">Learn Responsive Web Design\nEssentials</string>
    <string name="last_activity_on_6_jan_2022">Last activity on 6 Jan, 2022</string>
    <string name="purchase_date_1_jan_2022">Purchase Date: 1 Jan, 2022</string>
    <string name="creative_art_design">Creative Art Design</string>
    <string name="expiry_date_8_may_2022">Expiry Date: 8 May, 2022</string>
    <string name="attempt_40">Attempt : 40</string>
    <string name="youremail_gmail_com">Enter address...</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="title_activity_forget_password">forget_password_activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign">Sign</string>
    <string name="in">In</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_email_address_and_n_recover_password">Enter your email address and \n recover password</string>
    <string name="password">Password</string>
    <string name="forget">Forgot</string>
    <string name="verification">Verification</string>
    <string name="otp">OTP</string>
    <string name="inbox_or_spam_folder_for_otp">inbox or spam folder for OTP</string>
    <string name="kindly_check_your">Kindly check your</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="reset">Reset</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="up">Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Password</string>
    <string name="new_password">New password</string>
    <string name="conform_password">Confirm Password</string>
    <string name="enter_mobile_no">Enter your mobile number</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="notification">Notification</string>
    <string name="your_exam101_purchase_plan">Your exam101 purchase plan</string>
    <string name="your_purchase_plan_confirmation_has_been">Your purchase plan confirmation has been...</string>
    <string name="_45min_ago">45min ago</string>
    <string name="your_bank_details">Your Bank Details</string>
    <string name="annirudh_bhati">Annirudh Bhati</string>
    <string name="saving_account">Saving Account</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC CODE-</string>
    <string name="sbin0001707">SBIN0001707</string>
    <string name="update_bank_details">Update Bank Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="basic_details">Basic Details</string>
    <string name="yogendra54_gmail_com">yogendra54@gmail.com</string>
    <string name="holder_name">Holder Name</string>
    <string name="enter_holder_name">Enter holder name</string>
    <string name="enter_your_account_number">Enter your account number</string>
    <string name="type">Type</string>
    <string name="enter_your_ifsc_code">Enter your ifsc code</string>
    <string name="branch">Branch</string>
    <string name="enter_your_bank_branch">Enter your bank branch</string>
    <string name="submit">Submit</string>
    <string name="get_in_touch">Get in touch!</string>
    <string name="i_have_worls_class_flexible_support_via_live_chat_email_and_nhone_i_guarantee_that_you_ll_be_able_to_have_any_issue_nresolved_within_24_hours">I have world-class, flexible support via live chat, email and\nhone. I guarantee that you’ll be able to have any issue\nresolved within 24 hours.</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="raise_complaint">Raise Complaint</string>
    <string name="enter_complaint_subject">Enter Complaint Subject</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="enter_complaint_descripyion">Enter Complaint Description</string>
    <string name="priority">Priority</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="critical">Critical</string>
    <string name="upload_pdf_images">Upload PDF / Images</string>
    <string name="download_image">download image</string>
    <string name="cart">Cart</string>
    <string name="my_package">My Package</string>
    <string name="faq">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="term_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="raise_a_complaint">Raise a Complaint</string>
    <string name="app_version">App Version : 1.0.1</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="back_arrow">back_Arrow</string>
    <string name="blogs">Blogs</string>
    <string name="sorry">Sorry!!</string>
    <string name="go_to_home">Go to Home</string>
    <string name="your_cart_is_currently_empty">Your Cart Is Currently Empty.</string>
    <string name="get_the_most_dedicated_consultation_for_your_life_changing_course">Get the most dedicated consultation for your life-changing course</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="check_your_email_for_a_link_to_reset_your_password_if_it_doesn_t_appear_within_a_few_minutes_check_your_spam_folder">Check your email for a link to reset your password. If it doesn’t appear within a few minutes, check your spam folder.</string>
    <string name="return_to_sign_in">Return to Sign In</string>
    <string name="exams">Exams</string>
    <string name="packages">Packages</string>
</resources>