<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="General">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_icon"
                    android:iconTint="@color/white"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_package"
                    android:icon="@drawable/ic_resource_package"
                    android:title="@string/my_package" />
                <item
                    android:id="@+id/nav_wishlist"
                    android:icon="@drawable/ic_hart"
                    android:title="@string/my_wishlist" />
                <item
                    android:id="@+id/nav_blogs"
                    android:icon="@drawable/ic_blog_icon"
                    android:iconTint="@color/black"
                    android:title="@string/blogs" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/action_settings" />
            </group>
        </menu>
    </item>
    <item android:title="Other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_faq"
                    android:icon="@drawable/ic_faq"
                    android:title="@string/faq" />
                <item
                    android:id="@+id/nav_contect_us"
                    android:icon="@drawable/ic_music"
                    android:title="@string/contact_us" />
                <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about_us" />
                <item
                    android:id="@+id/nav_term_conditions"
                    android:icon="@drawable/ic_term"
                    android:title="@string/term_and_conditions" />
                <item
                    android:id="@+id/nav_privacy_policy"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/privacy_policy" />
                <item
                    android:id="@+id/nav_raise_a_complaint"
                    android:icon="@drawable/ic_complaint"
                    android:title="@string/raise_a_complaint" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:iconTint="@color/red"
                    android:title="@string/logout" />
            </group>

        </menu>
    </item>
    <item android:title="@string/app_version">
    </item>
</menu>
