<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="0dp"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_15sdp"
    tools:context=".main.activity.ContactUsActivity">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/_3sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_4sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_28sdp"
            android:contentDescription="@string/back_arrow"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_backarrow" />


        <TextView
            style="@style/TernaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/gothic_bold"
            android:text="@string/contact_us" />
    </LinearLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_12sdp"
        android:layout_below="@id/llToolbar"
        android:background="@color/lineColor"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="vertical">

        <TextView
            style="@style/PrimaryHeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/gothic_bold"
            android:text="@string/get_in_touch"
            android:textFontWeight="600" />

        <TextView
            style="@style/QuinaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/i_have_worls_class_flexible_support_via_live_chat_email_and_nhone_i_guarantee_that_you_ll_be_able_to_have_any_issue_nresolved_within_24_hours" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@color/HorizontallineColor" />

        <TextView
            style="@style/QuaternaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/full_name" />


        <EditText
            android:id="@+id/etHolderName"
            style="@style/QuaternarySpinnerLightTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/input_custom"
            android:hint="@string/enter_your_full_name"
            android:inputType="textPersonName"
            android:padding="@dimen/_12sdp"
            android:singleLine="true" />

        <TextView
            style="@style/QuaternaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/email_id" />

        <EditText
            android:id="@+id/etAccountEmail"
            style="@style/QuaternarySpinnerLightTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/input_custom"
            android:hint="@string/enter_your_mail_id"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            android:singleLine="true" />

        <TextView
            style="@style/QuaternaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/mobile_number" />

        <EditText
            android:id="@+id/etAccountMobileNo"
            style="@style/QuaternarySpinnerLightTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/input_custom"
            android:hint="@string/enter_mobile_no"
            android:inputType="number"
            android:padding="@dimen/_12sdp"
            android:singleLine="true" />

        <TextView
            style="@style/QuaternaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/message" />

        <EditText
            android:id="@+id/etMessage"
            style="@style/QuaternarySpinnerLightTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:autofillHints="enter complaint"
            android:background="@drawable/grey_stroke_half_curve"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:hint="@string/enter_your_message"
            android:inputType="textMultiLine"
            android:padding="@dimen/_12sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/theme_backround"
        android:gravity="center">

        <TextView
            style="@style/TernaryWhiteTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/submit" />
    </LinearLayout>


</RelativeLayout>
