<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_15sdp"
    tools:context=".main.activity.RaiseComplaintFormActivity">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/_3sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_4sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_28sdp"
            android:contentDescription="@string/back_arrow"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_backarrow" />


        <TextView
            style="@style/TernaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/gothic_bold"
            android:text="@string/raise_complaint" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_12sdp"
        android:layout_below="@id/llToolbar"
        android:background="@color/lineColor"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_below="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/QuaternaryThemeHeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/subject" />

        <EditText
            android:id="@+id/etHolderName"
            style="@style/QuinaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:autofillHints="enter complaint"
            android:background="@drawable/input_custom"
            android:hint="@string/enter_complaint_subject"
            android:inputType="textPersonName"
            android:padding="@dimen/_16sdp"
            android:singleLine="true" />

        <TextView
            style="@style/QuaternaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/description" />


            <EditText
                android:id="@+id/etMessage"
                style="@style/QuinarySubTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:autofillHints="enter complaint"
                android:background="@drawable/grey_stroke_half_curve"
                android:gravity="start"
                android:padding="@dimen/_14sdp"
                android:hint="@string/enter_complaint_descripyion"
                android:inputType="textPersonName" />

        <TextView
            style="@style/QuaternaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/priority" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal"
            android:weightSum="3">



            <TextView
                android:id="@+id/tvNormal"
                style="@style/QuinaryTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_custom"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:drawablePadding="@dimen/_minus10sdp"
                android:text="@string/normal"
                android:drawableStart="@drawable/ic_right_theme_arrow"
                />


            <TextView
                android:id="@+id/tvHigh"
                style="@style/QuinaryLightSubTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_custom"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/high" />

                <TextView
                    android:id="@+id/tvCritical"
                    style="@style/QuinaryLightSubTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_custom"
                    android:padding="@dimen/_12sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/critical" />
        </LinearLayout>

        <TextView
            style="@style/QuaternaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/upload_pdf_images" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/theme_stroke_dash"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardBackgroundColor="@color/lineColor"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="0dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/download_image"
                    android:src="@drawable/ic_download" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/QuinaryThemeTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/upload_pdf_images" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/theme_backround"
        android:gravity="center"
        >

        <TextView
            style="@style/TernaryWhiteTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit" />
    </LinearLayout>


</RelativeLayout>